# examples

./: .gitignore  README.md
boarding/: .env.template  .gitignore  README.md  astro.config.ts  auth.ts  components.json  form.db  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json
boarding/src/: Schema.ts  db.ts  dbUtils.ts  middleware.ts  onSubmit.tsx
mobile/ios/: .gitignore  README.md  project.yml  run.sh
react-integration/: astro.config.mjs  package-lock.json  package.json
react-integration/public/: payabli-tailwind-iframe.css
react-native/: .env.template  App.tsx  README.md  app.json  config.ts  env.d.ts  package.json  tsconfig.json
react-native/assets/: payabli.html
react-native/components/: HomePage.tsx  PayabliCheckout.tsx  PayabliEmbeddedWebView.tsx
react-native/hooks/: useCheckoutDemo.ts  usePayabli.ts  usePayabliWebView.ts
sdk/: README.md  sdk.sln
sdk-example/: README.md  package-lock.json
sdk/cs-sdk/: .gitignore  PayabliSdkExample.csproj  Program.cs  README.md  start.bat  (+1 more)
sdk/py-sdk/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  start.bat  start.sh
sdk/py-sdk/templates/: base.html  create.html  list.html  transaction.html
sdk/rust-sdk/: .env.template  .gitignore  Cargo.toml  README.md
sdk/rust-sdk/src/: main.rs
sdk/rust-sdk/templates/: base.html
temp-token/: .env  .env.template  README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
vue-integration/: README.md  astro.config.mjs  package-lock.json  package.json
webhooks/: README.md  _llm-prompt.txt  create.sh  transaction.sh  webhooks.sln
webhooks/rust-sdk/: .env.template  Cargo.toml  README.md
webhooks/rust-sdk/src/: main.rs
(+210 files in other folders)
