[tool.poetry]
name = "py-sdk"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "==0.137.1"
uvicorn = "==0.49.0"
python-multipart = "==0.0.32"
jinja2 = "==3.1.6"
python-dotenv = "==1.2.2"
payabli = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
