[package]
name = "rust-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
payabli_api = "1.0.7"
tokio = { version = "1.37", features = ["full"] }
axum = "0.7"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
